# ai-playground

./: .gitignore  README.md  Untitled.ipynb  requirements.txt
a2a/: docker-compose.yaml
a2a/agent_bmi/deployment/: Dockerfile
a2a/agent_bmi/src/: agent.py  main.py  server.py  task_manager.py
a2a/agent_email/deployment/: Dockerfile  entrypoint.sh
a2a/agent_email/src/: agent.py  main.py  server.py  task_manager.py
a2a/agent_websearch/deployment/: Dockerfile  requirements.txt
a2a/agent_websearch/src/: agent.py  main.py  server.py  task_manager.py
a2a/hello_redhat/deployment/: entrypoint.sh
a2a/ui/deployment/: Dockerfile
a2a/ui/src/: app.py  main.py
a2a/ui/src/pages/: home.py  (+5 more)
agent/a2a/: README.md
agent/a2a-agent/: docker-compose.yaml
agent/mcp/: README.md
agent/mcp-agent/: .env.template  app.py  constants.py  docker-compose.yaml  requirements.txt  server.py  server_nw.py
agent/mcp-agent-auth/: .env.template  auth.py  docker-compose.yaml
agent/mcp-agent-auth/agent_redhat/: pyproject.toml
agent/mcp-agent-auth/agent_redhat/src/: agent.py  main.py
agent/mcp-agent-auth/mcp_bmi/: pyproject.toml
agent/mcp-agent-auth/mcp_snowflake/: pyproject.toml
agent/mcp-agent-auth/mcp_snowflake/deployment/: Dockerfile  entrypoint.sh
agent/mcp-agent-auth/mcp_snowflake/src/: main.py
agent/mcp-agent-auth/mcp_websearch/: pyproject.toml
agent/mcp-agent-auth/utils/: constants.py  guardrail.py
agent/mcp-agent-langfuse/: init.sql
agent/mcp-agent-langfuse/agent_redhat/: pyproject.toml
agent/mcp-agent-langfuse/hello_redhat/: pyproject.toml
agent/mcp-agent-langfuse/utils/: constants.py  mcp_healthcheck.py  pylogger.py  schema.py
agent/mcp-agent-sqlite/: docker-compose.yaml
agent/mcp-agent-sqlite/agent_redhat/: pyproject.toml
agent/mcp-agent-sqlite/mcp_email/: pyproject.toml
agent/mcp-agent-sqlite/utils/: agent_utils.py  schema.py
agent/mcp-agent/agent_redhat/: pyproject.toml
agent/mcp-agent/hello_redhat/: pyproject.toml
agent/mcp-agent/hello_redhat/deployment/: Dockerfile  entrypoint.sh
agent/mcp-agent/hello_redhat/deployment/ui/: entrypoint.sh
agent/mcp-agent/hello_redhat/src/: client.py  main.py
agent/mcp-agent/src/: agent.py  agent_nw.py  client.py  guardrail.py  mcp_bmi.py  mcp_calculator.py  mcp_email.py  mcp_websearch.py  memory.py  utils.py
agent/mcp-agent/utils/: guardrail.py  memory.py  pylogger.py  schema.py
agent/single_agent_single_tool/: app.py
agent/single_agent_single_tool/src/: agent.py  client.py  server.py
federated-ml/: network-threat-detection-using-federated-learning.ipynb  requirements.txt
fine-tune/vanilla-embedding/: fine-tune-huggingface-embedding-llamaindex.ipynb
guardrail/: llamaguard-groq.ipynb  requirements.txt
mcp/: README.md  docker-compose-cowboy.yaml  docker-compose-fedora.yaml
mcp/agent_cowboy/src/: app.py  server.py
mcp/agent_fedora/src/: app.py  client.py  server.py
mcp/app_bmi/src/: server.py
mcp/app_email/src/: server.py
rag/raptor/: requirements.txt
(+654 files in other folders)
