[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent_redhat"
version = "0.1.0"
description = "Agent Redhat"
requires-python = ">=3.13"
dependencies = [
    "langchain-community ~=0.3.16",
    "langchain-core ~=0.3.33",
    "langchain-groq ~=0.2.1",
    "langchain-google-genai ~=2.0.11",
    "langgraph ~=0.4.5",
    "langgraph-checkpoint-mongodb ~=0.1.3",
    "langgraph-checkpoint-postgres ~=2.0.13",
    "langgraph-checkpoint-sqlite ~=2.0.1",
    "pydantic ~=2.11.4",
    "uvicorn==0.32.1",
    "fastapi ~=0.115.5",
    "resend==2.8.0",
    "langchain-mcp-adapters==0.1.1",
    "psycopg2-binary==2.9.10",
    "langfuse==2.60.5",
    "mcp==1.9.1",
    "requests-oauthlib==2.0.0",
    "starlette==0.46.2",
    "itsdangerous==2.2.0",
    "PyJWT==2.10.1"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["agent_redhat"]
